--- a/index.html
+++ b/index.html
@@ -1,99 +1,121 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Graph of Notes</title>
-<style>
-    body { margin: 0; padding: 0; overflow: hidden; background-color: #1e1e1e; }
+  <meta charset="utf-8">
+  <style>
+    body { margin:0; padding:0; overflow:hidden; background:#1e1e1e; }
     .node { cursor: pointer; }
     .link { stroke: #999; stroke-opacity: 0.6; }
-    text { font-family: Arial, sans-serif; font-size: 12px; pointer-events: none; fill: #fff; }
+    text { font-family: Arial, sans-serif; font-size: 12px; fill: #fff; pointer-events: none; }
     svg { width: 100vw; height: 100vh; }
-</style>
+  </style>
 </head>
 <body>
-<div id="graph"></div>
-<script src="https://d3js.org/d3.v5.min.js"></script>
-<script>
-// -------------------
-// Nodes y enlaces
-// -------------------
-var nodes = [
-    {id: "plan_teoria_de_momentos.html", label: "Plan Teoria de Momentos", color: "#7f7f7f", link_count: 6},
-    {id: "plan_algebra_de_lie.html", label: "Plan Algebra de Lie", color: "#7f7f7f", link_count: 2},
-    {id: "hall_lie_algebras.html", label: "Hall Lie Algebras", color: "#7f7f7f", link_count: 2},
-    {id: "plan_espacios_cocientes.html", label: "Plan Espacios Cocientes", color: "#7f7f7f", link_count: 11},
-    {id: "evans – partial differential equations.html", label: "Evans – Partial Differential Equations", color: "#7f7f7f", link_count: 2},
-    {id: "introduction to mechanics and symmetry - jerry e. marsden.html", label: "Introduction to Mechanics and Symmetry", color: "#7f7f7f", link_count: 2},
-    {id: "on quotient spaces — peter g. bergmann (1973).html", label: "On Quotient Spaces — Peter G. Bergmann", color: "#7f7f7f", link_count: 2},
-    {id: "federer – geometric measure theory.html", label: "Federer – Geometric Measure Theory", color: "#7f7f7f", link_count: 2},
-    {id: "mathematics for theoretical physics — jean claude dutailly.html", label: "Mathematics for Theoretical Physics", color: "#7f7f7f", link_count: 2},
-    {id: "equivalence relations and quotient spaces — albert s. schwarz.html", label: "Equivalence Relations and Quotient Spaces — Albert S. Schwarz", color: "#7f7f7f", link_count: 2},
-    {id: "cohn – measure theory.html", label: "Cohn – Measure Theory", color: "#7f7f7f", link_count: 2},
-    {id: "quotient maps and configuration spaces of hard disks.html", label: "Quotient Maps and Configuration Spaces", color: "#7f7f7f", link_count: 2}
-];
+  <div id="graph"></div>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script>
+    // Tus notas reales
+    var nodes = [
+      {id: "Plan_Teoria_de_Momentos.md", label: "Plan Teoria de Momentos", color:"#ff6347"},
+      {id: "Plan_Algebra_de_Lie.md", label: "Plan Algebra de Lie", color:"#1e90ff"},
+      {id: "Plan_Espacios_Cocientes.md", label: "Plan Espacios Cocientes", color:"#32cd32"},
+      {id: "Evans – Partial Differential Equations.md", label: "Evans PDE", color:"#ffa500"},
+      {id: "Introduction to Mechanics and Symmetry - Jerry E. Marsden.md", label: "Introduction to Mechanics", color:"#00ced1"},
+      {id: "On Quotient Spaces — Peter G. Bergmann (1973).md", label: "On Quotient Spaces", color:"#ff69b4"},
+      {id: "Federer – Geometric Measure Theory.md", label: "Federer GMT", color:"#9370db"},
+      {id: "Mathematics for Theoretical Physics — Jean Claude Dutailly.md", label: "Mathematics for Theoretical Physics", color:"#7fff00"},
+      {id: "Equivalence Relations and Quotient Spaces — Albert S. Schwarz.md", label: "Equivalence Relations", color:"#ff4500"},
+      {id: "Cohn – Measure Theory.md", label: "Cohn Measure Theory", color:"#00fa9a"},
+      {id: "Quotient maps and configuration spaces of hard disks.md", label: "Quotient Maps", color:"#1e90ff"},
+      {id: "Hall_Lie_Algebras.md", label: "Hall Lie Algebras", color:"#f08080"}
+    ];
 
-var links = [
-    {source: "plan_teoria_de_momentos.html", target: "cohn – measure theory.html"},
-    {source: "plan_teoria_de_momentos.html", target: "federer – geometric measure theory.html"},
-    {source: "plan_teoria_de_momentos.html", target: "evans – partial differential equations.html"},
-    {source: "plan_algebra_de_lie.html", target: "hall_lie_algebras.html"},
-    {source: "hall_lie_algebras.html", target: "plan_algebra_de_lie.html"},
-    {source: "plan_espacios_cocientes.html", target: "equivalence relations and quotient spaces — albert s. schwarz.html"},
-    {source: "plan_espacios_cocientes.html", target: "on quotient spaces — peter g. bergmann (1973).html"},
-    {source: "plan_espacios_cocientes.html", target: "quotient maps and configuration spaces of hard disks.html"},
-    {source: "plan_espacios_cocientes.html", target: "introduction to mechanics and symmetry - jerry e. marsden.html"},
-    {source: "plan_espacios_cocientes.html", target: "mathematics for theoretical physics — jean claude dutailly.html"},
-    {source: "evans – partial differential equations.html", target: "plan_teoria_de_momentos.html"},
-    {source: "introduction to mechanics and symmetry - jerry e. marsden.html", target: "plan_espacios_cocientes.html"},
-    {source: "on quotient spaces — peter g. bergmann (1973).html", target: "plan_espacios_cocientes.html"},
-    {source: "federer – geometric measure theory.html", target: "plan_teoria_de_momentos.html"},
-    {source: "mathematics for theoretical physics — jean claude dutailly.html", target: "plan_espacios_cocientes.html"},
-    {source: "equivalence relations and quotient spaces — albert s. schwarz.html", target: "plan_espacios_cocientes.html"},
-    {source: "cohn – measure theory.html", target: "plan_teoria_de_momentos.html"},
-    {source: "quotient maps and configuration spaces of hard disks.html", target: "plan_espacios_cocientes.html"}
-];
+    var links = [
+      {source: "Plan_Teoria_de_Momentos.md", target: "Cohn – Measure Theory.md"},
+      {source: "Plan_Teoria_de_Momentos.md", target: "Federer – Geometric Measure Theory.md"},
+      {source: "Plan_Teoria_de_Momentos.md", target: "Evans – Partial Differential Equations.md"},
+      {source: "Plan_Algebra_de_Lie.md", target: "Hall_Lie_Algebras.md"},
+      {source: "Plan_Espacios_Cocientes.md", target: "Equivalence Relations and Quotient Spaces — Albert S. Schwarz.md"},
+      {source: "Plan_Espacios_Cocientes.md", target: "On Quotient Spaces — Peter G. Bergmann (1973).md"},
+      {source: "Plan_Espacios_Cocientes.md", target: "Quotient maps and configuration spaces of hard disks.md"},
+      {source: "Plan_Espacios_Cocientes.md", target: "Introduction to Mechanics and Symmetry - Jerry E. Marsden.md"},
+      {source: "Plan_Espacios_Cocientes.md", target: "Mathematics for Theoretical Physics — Jean Claude Dutailly.md"}
+    ];
 
-// -------------------
-// Grafo D3
-// -------------------
-var width = window.innerWidth, height = window.innerHeight;
-var svg = d3.select("#graph").append("svg").attr("width", width).attr("height", height);
-var g = svg.append("g");
+    var width = window.innerWidth;
+    var height = window.innerHeight;
 
-svg.call(d3.zoom().scaleExtent([0.1,4]).on("zoom", function(event){ g.attr("transform", event.transform); }));
+    var svg = d3.select("#graph")
+                .append("svg")
+                .attr("width", width)
+                .attr("height", height);
 
-var simulation = d3.forceSimulation(nodes)
-    .force("link", d3.forceLink(links).id(d=>d.id).distance(100))
-    .force("charge", d3.forceManyBody().strength(-300))
-    .force("center", d3.forceCenter(width/2,height/2));
+    var g = svg.append("g");
 
-var link = g.append("g").selectAll("line").data(links).enter().append("line").attr("class","link");
-var node = g.append("g").selectAll("circle").data(nodes).enter().append("circle")
-    .attr("r", d=>5+Math.sqrt(d.link_count))
-    .attr("fill", d=>d.color)
-    .attr("class","node")
-    .on("click", (event,d)=> window.location.href=d.id)
-    .call(d3.drag()
-        .on("start", dragstarted)
-        .on("drag", dragged)
-        .on("end", dragended));
+    var simulation = d3.forceSimulation(nodes)
+                       .force("link", d3.forceLink(links).id(d => d.id).distance(150))
+                       .force("charge", d3.forceManyBody().strength(-300))
+                       .force("center", d3.forceCenter(width/2, height/2))
+                       .on("tick", ticked);
 
-var text = g.append("g").selectAll("text").data(nodes).enter().append("text")
-    .attr("x", 8)
-    .attr("y", ".31em")
-    .text(d=>d.label);
+    var link = g.append("g")
+                .attr("class", "links")
+                .selectAll("line")
+                .data(links)
+                .enter()
+                .append("line")
+                .attr("class","link");
 
-simulation.on("tick", ()=>{
-    link.attr("x1", d=>d.source.x).attr("y1", d=>d.source.y)
-        .attr("x2", d=>d.target.x).attr("y2", d=>d.target.y);
-    node.attr("cx", d=>d.x).attr("cy", d=>d.y);
-    text.attr("x", d=>d.x+8).attr("y", d=>d.y+3);
-});
+    var node = g.append("g")
+                .attr("class","nodes")
+                .selectAll("g")
+                .data(nodes)
+                .enter()
+                .append("g")
+                .call(d3.drag()
+                    .on("start", dragstarted)
+                    .on("drag", dragged)
+                    .on("end", dragended))
+                .on("click", function(event,d){
+                    if(!event.defaultPrevented){
+                        window.location.href = d.id; // abre tu archivo .md
+                    }
+                });
 
-function dragstarted(event,d){ if(!event.active) simulation.alphaTarget(0.3).restart(); d.fx=d.x; d.fy=d.y; }
-function dragged(event,d){ d.fx=event.x; d.fy=event.y; }
-function dragended(event,d){ if(!event.active) simulation.alphaTarget(0); d.fx=null; d.fy=null; }
-</script>
+    node.append("circle")
+        .attr("r", 15)
+        .attr("fill", d => d.color);
+
+    node.append("text")
+        .attr("x", 20)
+        .attr("y", 5)
+        .text(d => d.label);
+
+    function ticked(){
+      link.attr("x1", d => d.source.x)
+          .attr("y1", d => d.source.y)
+          .attr("x2", d => d.target.x)
+          .attr("y2", d => d.target.y);
+
+      node.attr("transform", d => `translate(${d.x},${d.y})`);
+    }
+
+    function dragstarted(d){
+      if(!d3.event.active) simulation.alphaTarget(0.3).restart();
+      d.fx = d.x;
+      d.fy = d.y;
+    }
+
+    function dragged(d){
+      d.fx = d3.event.x;
+      d.fy = d3.event.y;
+    }
+
+    function dragended(d){
+      if(!d3.event.active) simulation.alphaTarget(0);
+      d.fx = null;
+      d.fy = null;
+    }
+  </script>
 </body>
 </html>
