--- a/index.html
+++ b/index.html
@@ -1,138 +1,131 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <style>
-    body { margin:0; padding:0; overflow:hidden; background:#1e1e1e; }
-    .node { cursor: pointer; }
-    .link { stroke: #999; stroke-opacity: 0.6; }
-    text { font-family: Arial, sans-serif; font-size: 12px; fill: #fff; pointer-events: none; }
-    svg { width: 100vw; height: 100vh; }
-  </style>
+<meta charset="utf-8">
+<style>
+body { margin:0; padding:0; overflow:hidden; background:#1e1e1e; }
+.node { cursor: pointer; }
+.link { stroke: #999; stroke-opacity: 0.6; }
+text { font-family: Arial, sans-serif; font-size: 12px; fill: #fff; pointer-events: none; }
+svg { width: 100vw; height: 100vh; }
+</style>
 </head>
 <body>
-  <div id="graph"></div>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script>
-    // Nodos
-    var nodes = [
-      {id:"plan_teoria_de_momentos.md", label:"Plan Teoría de Momentos", color:"#ff6347"},
-      {id:"plan_algebra_de_lie.md", label:"Plan Álgebra de Lie", color:"#1e90ff"},
-      {id:"hall_lie_algebras.md", label:"Hall Lie Algebras", color:"#32cd32"},
-      {id:"plan_espacios_cocientes.md", label:"Plan Espacios Cocientes", color:"#ffa500"},
-      {id:"evans – partial differential equations.md", label:"Evans PDE", color:"#ff69b4"},
-      {id:"introduction to mechanics and symmetry - jerry e. marsden.md", label:"Introduction Mechanics", color:"#8a2be2"},
-      {id:"on quotient spaces — peter g. bergmann (1973).md", label:"On Quotient Spaces", color:"#00ced1"},
-      {id:"federer – geometric measure theory.md", label:"Federer GMT", color:"#adff2f"},
-      {id:"mathematics for theoretical physics — jean claude dutailly.md", label:"Math Theoretical Physics", color:"#ff4500"},
-      {id:"equivalence relations and quotient spaces — albert s. schwarz.md", label:"Equivalence & Quotient Spaces", color:"#20b2aa"},
-      {id:"cohn – measure theory.md", label:"Cohn Measure Theory", color:"#ff1493"},
-      {id:"quotient maps and configuration spaces of hard disks.md", label:"Quotient Maps Hard Disks", color:"#7fff00"}
-    ];
+<div id="graph"></div>
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<script>
+// Nodos
+var nodes = [
+  {id:"plan_teoria_de_momentos.html", label:"Plan Teoría de Momentos", color:"#ff6347"},
+  {id:"plan_algebra_de_lie.html", label:"Plan Álgebra de Lie", color:"#1e90ff"},
+  {id:"hall_lie_algebras.html", label:"Hall Lie Algebras", color:"#32cd32"},
+  {id:"plan_espacios_cocientes.html", label:"Plan Espacios Cocientes", color:"#ffa500"},
+  {id:"evans – partial differential equations.html", label:"Evans PDE", color:"#ff69b4"},
+  {id:"introduction to mechanics and symmetry - jerry e. marsden.html", label:"Introduction Mechanics", color:"#8a2be2"},
+  {id:"on quotient spaces — peter g. bergmann (1973).html", label:"On Quotient Spaces", color:"#00ced1"},
+  {id:"federer – geometric measure theory.html", label:"Federer GMT", color:"#adff2f"},
+  {id:"mathematics for theoretical physics — jean claude dutailly.html", label:"Math Theoretical Physics", color:"#ff4500"},
+  {id:"equivalence relations and quotient spaces — albert s. schwarz.html", label:"Equivalence & Quotient Spaces", color:"#20b2aa"},
+  {id:"cohn – measure theory.html", label:"Cohn Measure Theory", color:"#ff1493"},
+  {id:"quotient maps and configuration spaces of hard disks.html", label:"Quotient Maps Hard Disks", color:"#7fff00"}
+];
 
-    // Enlaces
-    var links = [
-      {source:"plan_teoria_de_momentos.md", target:"cohn – measure theory.md"},
-      {source:"plan_teoria_de_momentos.md", target:"federer – geometric measure theory.md"},
-      {source:"plan_teoria_de_momentos.md", target:"evans – partial differential equations.md"},
-      {source:"plan_algebra_de_lie.md", target:"hall_lie_algebras.md"},
-      {source:"hall_lie_algebras.md", target:"plan_algebra_de_lie.md"},
-      {source:"plan_espacios_cocientes.md", target:"equivalence relations and quotient spaces — albert s. schwarz.md"},
-      {source:"plan_espacios_cocientes.md", target:"on quotient spaces — peter g. bergmann (1973).md"},
-      {source:"plan_espacios_cocientes.md", target:"quotient maps and configuration spaces of hard disks.md"},
-      {source:"plan_espacios_cocientes.md", target:"introduction to mechanics and symmetry - jerry e. marsden.md"},
-      {source:"plan_espacios_cocientes.md", target:"mathematics for theoretical physics — jean claude dutailly.md"},
-      {source:"evans – partial differential equations.md", target:"plan_teoria_de_momentos.md"},
-      {source:"introduction to mechanics and symmetry - jerry e. marsden.md", target:"plan_espacios_cocientes.md"},
-      {source:"on quotient spaces — peter g. bergmann (1973).md", target:"plan_espacios_cocientes.md"},
-      {source:"federer – geometric measure theory.md", target:"plan_teoria_de_momentos.md"},
-      {source:"mathematics for theoretical physics — jean claude dutailly.md", target:"plan_espacios_cocientes.md"},
-      {source:"equivalence relations and quotient spaces — albert s. schwarz.md", target:"plan_espacios_cocientes.md"},
-      {source:"cohn – measure theory.md", target:"plan_teoria_de_momentos.md"},
-      {source:"quotient maps and configuration spaces of hard disks.md", target:"plan_espacios_cocientes.md"}
-    ];
+// Enlaces
+var links = [
+  {source:"plan_teoria_de_momentos.html", target:"cohn – measure theory.html"},
+  {source:"plan_teoria_de_momentos.html", target:"federer – geometric measure theory.html"},
+  {source:"plan_teoria_de_momentos.html", target:"evans – partial differential equations.html"},
+  {source:"plan_algebra_de_lie.html", target:"hall_lie_algebras.html"},
+  {source:"hall_lie_algebras.html", target:"plan_algebra_de_lie.html"},
+  {source:"plan_espacios_cocientes.html", target:"equivalence relations and quotient spaces — albert s. schwarz.html"},
+  {source:"plan_espacios_cocientes.html", target:"on quotient spaces — peter g. bergmann (1973).html"},
+  {source:"plan_espacios_cocientes.html", target:"quotient maps and configuration spaces of hard disks.html"},
+  {source:"plan_espacios_cocientes.html", target:"introduction to mechanics and symmetry - jerry e. marsden.html"},
+  {source:"plan_espacios_cocientes.html", target:"mathematics for theoretical physics — jean claude dutailly.html"},
+  {source:"evans – partial differential equations.html", target:"plan_teoria_de_momentos.html"},
+  {source:"introduction to mechanics and symmetry - jerry e. marsden.html", target:"plan_espacios_cocientes.html"},
+  {source:"on quotient spaces — peter g. bergmann (1973).html", target:"plan_espacios_cocientes.html"},
+  {source:"federer – geometric measure theory.html", target:"plan_teoria_de_momentos.html"},
+  {source:"mathematics for theoretical physics — jean claude dutailly.html", target:"plan_espacios_cocientes.html"},
+  {source:"equivalence relations and quotient spaces — albert s. schwarz.html", target:"plan_espacios_cocientes.html"},
+  {source:"cohn – measure theory.html", target:"plan_teoria_de_momentos.html"},
+  {source:"quotient maps and configuration spaces of hard disks.html", target:"plan_espacios_cocientes.html"}
+];
 
-    var width = window.innerWidth;
-    var height = window.innerHeight;
+var width = window.innerWidth;
+var height = window.innerHeight;
 
-    var svg = d3.select("#graph")
-                .append("svg")
-                .attr("width", width)
-                .attr("height", height);
+var svg = d3.select("#graph")
+            .append("svg")
+            .attr("width", width)
+            .attr("height", height);
 
-    var g = svg.append("g");
+var g = svg.append("g");
 
-    // Zoom
-    var zoom = d3.zoom()
-                 .scaleExtent([0.1, 4])
-                 .on("zoom", function(event){ g.attr("transform", event.transform); });
+// Zoom con rueda del ratón
+svg.call(d3.zoom().scaleExtent([0.1,4]).on("zoom", (event) => {
+  g.attr("transform", event.transform);
+}));
 
-    svg.call(zoom);
+// Simulación
+var simulation = d3.forceSimulation(nodes)
+                   .force("link", d3.forceLink(links).id(d=>d.id).distance(150))
+                   .force("charge", d3.forceManyBody().strength(-300))
+                   .force("center", d3.forceCenter(width/2,height/2))
+                   .on("tick", ticked);
 
-    // Fuerza
-    var simulation = d3.forceSimulation(nodes)
-                       .force("link", d3.forceLink(links).id(d=>d.id).distance(150))
-                       .force("charge", d3.forceManyBody().strength(-300))
-                       .force("center", d3.forceCenter(width/2,height/2))
-                       .on("tick", ticked);
+// Líneas
+var link = g.append("g").attr("class","links")
+            .selectAll("line")
+            .data(links)
+            .enter()
+            .append("line").attr("class","link");
 
-    // Líneas
-    var link = g.append("g")
-                .attr("class","links")
-                .selectAll("line")
-                .data(links)
-                .enter()
-                .append("line")
-                .attr("class","link");
+// Nodos
+var node = g.append("g").attr("class","nodes")
+            .selectAll("g")
+            .data(nodes)
+            .enter()
+            .append("g")
+            .call(d3.drag()
+                .on("start", dragstarted)
+                .on("drag", dragged)
+                .on("end", dragended))
+            .on("click", (event,d)=>{
+                window.location.href = d.id; // abrir HTML
+            });
 
-    // Nodos
-    var node = g.append("g")
-                .attr("class","nodes")
-                .selectAll("g")
-                .data(nodes)
-                .enter()
-                .append("g")
-                .call(d3.drag()
-                    .on("start", dragstarted)
-                    .on("drag", dragged)
-                    .on("end", dragended))
-                .on("click", function(event,d){
-                    if(!event.defaultPrevented){
-                        window.location.href = d.id.replace(".md",".html"); // abrir el HTML correspondiente
-                    }
-                });
+node.append("circle")
+    .attr("r", 15)
+    .attr("fill", d=>d.color);
 
-    node.append("circle")
-        .attr("r", 15)
-        .attr("fill", d=>d.color);
+node.append("text")
+    .attr("x", 20)
+    .attr("y", 5)
+    .text(d=>d.label);
 
-    node.append("text")
-        .attr("x", 20)
-        .attr("y", 5)
-        .text(d=>d.label);
+function ticked(){
+  link.attr("x1", d=>d.source.x)
+      .attr("y1", d=>d.source.y)
+      .attr("x2", d=>d.target.x)
+      .attr("y2", d=>d.target.y);
 
-    function ticked(){
-      link.attr("x1", d=>d.source.x)
-          .attr("y1", d=>d.source.y)
-          .attr("x2", d=>d.target.x)
-          .attr("y2", d=>d.target.y);
+  node.attr("transform", d=>`translate(${d.x},${d.y})`);
+}
 
-      node.attr("transform", d=>`translate(${d.x},${d.y})`);
-    }
+function dragstarted(event,d){
+  if(!event.active) simulation.alphaTarget(0.3).restart();
+  d.fx=d.x; d.fy=d.y;
+}
 
-    function dragstarted(d){
-      if(!d3.event.active) simulation.alphaTarget(0.3).restart();
-      d.fx=d.x; d.fy=d.y;
-    }
+function dragged(event,d){
+  d.fx=event.x; d.fy=event.y;
+}
 
-    function dragged(d){
-      d.fx=d3.event.x; d.fy=d3.event.y;
-    }
-
-    function dragended(d){
-      if(!d3.event.active) simulation.alphaTarget(0);
-      d.fx=null; d.fy=null;
-    }
-  </script>
+function dragended(event,d){
+  if(!event.active) simulation.alphaTarget(0);
+  d.fx=null; d.fy=null;
+}
+</script>
 </body>
 </html>
